<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="app_name">Brazil 2014</string>
    <string name="action_settings">Settings</string>
    <string name="go_back">Return</string>
    <string name="time">100</string>
    <string name="group">GROUPS</string>
    <string name="fxt">FIXTURES</string>
    <string name="teams">TEAMS</string>
    <string name="stars">ONES TO WATCH</string>
    <string name="winner">PICK A WINNER</string>
    <string name="winner_details">Enter your name, country and who you think will win the 2014 World Cup</string>
    <string name="name">Name: </string>
    <string name="country">Country: </string>
    <string name="pickWin">Winner: </string>
    <string name="nameHint">Name </string>
    <string name="countryHint">Home country </string>
    <string name="winnerHint">World Cup 2014 Winner </string>
	<string name="submit">Submit</string>
	<string name="update">Update</string>
	<string name="delete">Delete</string>
	<string name="create">Create</string>
	<string name="predictions">Predictions</string>
	<string name="groupStage">Group Stage</string>
		<string name="groupA">Group A</string>
		<string name="groupB">Group B</string>
		<string name="groupC">Group C</string>
		<string name="groupD">Group D</string>
		<string name="groupE">Group E</string>
		<string name="groupF">Group F</string>
		<string name="groupG">Group G</string>
		<string name="groupH">Group H</string>
	<string name="ko">Knockout Stage</string>
		<string name="round16">Round of 16</string>
		<string name="quarter">Quarter-Finals</string>
		<string name="semi">Semi-Finals</string>
		<string name="third">Third Place Play-off</string>
		<string name="wc_final">Final</string>
	<string name="nationality">NATIONALITY: </string>
	<string name="age">AGE: </string>
	<string name="caps">CAPS: </string>
	<string name="debut">DEBUT: </string>
	<string name="goals">GOALS: </string>
	<string name="club">CLUB: </string>
	<string name="neymar">Neymar</string>
	<string name="hazard">Eden Hazard</string>
	<string name="suarez">Luis Suarez</string>
	<string name="ronaldo">Cristiano Ronaldo</string>
	<string name="messi">Lionel Messi</string>
	<string name="stadiums">STADIUMS</string>
		<string name="maracana">Maracana</string>
			<string name="rio">Rio de Janeiro</string>
		<string name="arenaCor">Arena Corinthians</string>
			<string name="sao">Sao Paulo</string>
		<string name="mineirao">Mineirão</string>
			<string name="belo">Belo Horizonte</string>
		<string name="estad">Estádio Nacional de Brasilia</string>
			<string name="bras">Brasilia</string>
		<string name="arenaCast">Arena Castelão</string>
			<string name="fort">Fortaleza</string>
		<string name="arenaFonte">Arena Fonte Nova</string>
			<string name="sal">Salvador</string>
		<string name="arenaPer">Arena Pernambuco</string>
			<string name="porto">Porto Alegre</string>
		<string name="estadBei">Estádio Beira-Rio</string>
			<string name="recife">Recife</string>
		<string name="arenaAma">Arena de Amazonia</string>
			<string name="manaus">Manaus</string>
		<string name="arenaPant">Arena Pantanal</string>
			<string name="cui">Cuiaba</string>
		<string name="arenaDun">Arena das Dunas</string>
			<string name="natal">Natal</string>
		<string name="arenaBaix">Arena da Baixada</string>
			<string name="curi">Curitiba</string>
			
	
</resources>
