<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/listbg"
    >

    <TextView
        android:textSize="12pt"
        android:gravity="center_horizontal"
        android:id="@+id/formHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winner_details"
        android:textColor="@color/yellow" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameHint"
        android:inputType="textCapSentences" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/countryView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/countryHint"
        android:inputType="textCapSentences" />

    <TextView
        android:id="@+id/winnerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickWin"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editWinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/winnerHint"
        android:inputType="textCapSentences" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:paddingTop="10dp"
        android:text="@string/submit"
        android:textSize="15pt" />

</LinearLayout>