<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="horizontal" >
	
	    <TableLayout
	        android:layout_gravity="center_horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	    	android:background="@drawable/bg"
	    	android:paddingTop="3dp"
	    	android:paddingBottom="5dp" >
	
	        <TableRow
	            android:id="@+id/tableRow1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal"
	            android:weightSum="10" >
	
	            <Button
	                android:id="@+id/groupBut"
	                style="@style/mainBut1"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="5"
	                android:text="@string/group" />
	        </TableRow>
	
	        <TableRow
	            android:gravity="center_horizontal"
	            android:id="@+id/tableRow2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:weightSum="10" >
	
	            <Button
	                android:id="@+id/fxtBut"
	                style="@style/mainBut1"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/fxt"
	                android:layout_weight="5" />
	
	        </TableRow>
	
	        <TableRow
	            android:gravity="center_horizontal"
	            android:id="@+id/tableRow3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:weightSum="10" >
	
	            <Button
	                android:id="@+id/teamBut"
	                style="@style/mainBut1"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/teams" 
	                android:layout_weight="5"/>
	
	        </TableRow>
	
	        <TableRow
	            android:gravity="center_horizontal"
	            android:id="@+id/tableRow4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:weightSum="10">
	
	            <Button
	                android:id="@+id/starsBut"
	                style="@style/mainBut1"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/stars" 
	                android:layout_weight="5"/>
	
	        </TableRow>
	
	        <TableRow
	            android:gravity="center_horizontal"
	            android:id="@+id/tableRow5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:weightSum="10" >
	
	            <Button
	                android:id="@+id/winnerBut"
	                style="@style/mainBut1"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/winner"
	                android:layout_weight="5" />
	
	        </TableRow>
	
	    </TableLayout>

</LinearLayout>
