<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="horizontal" >
	
	    <TableLayout
	        android:layout_gravity="center_horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	    	android:background="@drawable/dark_bg"
	    	android:paddingTop="3dp"
	    	android:paddingBottom="5dp" >
	
	        <TableRow
	            android:id="@+id/tableRow1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal"
	            android:weightSum="10" >

	            <TextView
	                style="@style/heading"
	                android:id="@+id/fxtHeading"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center_horizontal"
	                android:text="@string/fxt" />
	            
	        </TableRow>
	
	        <TableRow
	            android:gravity="center_horizontal"
	            android:id="@+id/tableRow2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:weightSum="10" >
	
	            <Button
	                android:id="@+id/groupStgBut"
	                style="@style/mainBut1"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/groupStage"
	                android:layout_weight="5" />
	
	        </TableRow>
	
	        <TableRow
	            android:gravity="center_horizontal"
	            android:id="@+id/tableRow3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:weightSum="10" >
	
	            <Button
	                android:id="@+id/teamBut"
	                style="@style/mainBut1"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/ko" 
	                android:layout_weight="5"/>
	
	        </TableRow>
	
	    </TableLayout>

</LinearLayout>
